# rusty_flexi

./: .gitignore  Cargo.toml  README.md  build.bat
src/: curses.rs  main.rs  savable.rs  settings.rs
src/curses/: editor.rs  mod.rs  navigator.rs  settingseditor.rs
src/timedata/: daysoff.rs  flexday.rs  flexmonth.rs  flexweek.rs  mod.rs  naivedate_iterator.rs
src/widgets/: daywidget.rs  hourspin.rs  mod.rs
