[package]
name = "rusty_flexi"
version = "0.6.0"
authors = ["Geobert Quach <geobert@pm.me>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pdcurses-sys = "0.7"
pancurses = "0.16"
failure = "0.1.5"
failure_derive = "0.1.5"
glob = "0.2"
