[package]
name = "rusty_flexi"
version = "0.6.1"
authors = ["Geobert Quach <geobert@pm.me>"]
edition = "2018"

[dependencies]
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
chrono = { version = "0.4.6", features = ["serde"] }
pdcurses-sys = "0.7.1"
pancurses = "0.16.1"
failure = "0.1.5"
failure_derive = "0.1.5"
glob = "0.3.0"
